<resources>
    <string name="app_name">app-componentes</string>
    <string name="texttituloregistro">REGISTRAR PERSONAS</string>
    <string name="textnombres">Ingrese sus nombres</string>
    <string name="textapellidos">Ingrese sus apellidos</string>
    <string name="textgenero">Seleccione su género:</string>
    <string name="textmasculino">Masculino</string>
    <string name="textfeminino">Femenino</string>
    <string name="textnoespecifica">No Especif.</string>
    <string name="texthobies">Seleccione sus hobbies:</string>
    <string name="textfutbol">Futbol</string>
    <string name="textmusica">Música</string>
    <string name="textotraspreferencias">Otras Pref.</string>
</resources>